# Course

./: CMakeLists.txt  Course.hpp  README.md
.github/workflows/: tests.yml
Course-main/: Course.hpp  README.md
Course-main/tests/: test_course.cpp
tests/: test_course.cpp
